# death_bot_panel

./: .vimspector.json  LICENSE  README.md  docker-compose.up  docker-compose.yml  makefile  pyproject.toml
death_bot_panel/: manage.py
death_bot_panel/death_bot_panel/: asgi.py  settings.py  urls.py  wsgi.py
death_bot_panel/death_bot_panel/auth/: urls.py
death_bot_panel/death_bot_panel/quotes/: admin.py  models.py  serializers.py  urls.py  views.py
death_bot_panel/death_bot_panel/quotes/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  declaration.d.ts  index.css  index.tsx
frontend/src/common/errors/: index.ts
frontend/src/common/mocs/navigate/: index.tsx
frontend/src/components/app-button/: index.tsx
frontend/src/components/auth/: index.tsx  style.scss
frontend/src/components/common/: protectedRoute.tsx
frontend/src/components/flex-between/: index.tsx
frontend/src/components/layout/: index.tsx  styles.ts
frontend/src/components/sidebar/: index.tsx  styles.tsx
frontend/src/components/top-bar/: index.tsx  styles.ts
frontend/src/components/watchlist/: index.tsx
frontend/src/pages/auth/: index.tsx  styles.ts
frontend/src/pages/news/: index.tsx
frontend/src/pages/quotes/: index.tsx  styles.ts
frontend/src/pages/settings/: index.tsx
frontend/src/store/: index.ts
frontend/src/theme/: index.ts
frontend/src/utils/axios/: index.ts
frontend/src/utils/router/: interfaces.ts  privateRoute.tsx
frontend/src/utils/yup/: index.ts
tests/: quotes_test.py
(+11 files in other folders)
